# gdbundle-gdb-dashboard

./: Makefile  README.md  pyproject.toml
gdbundle_gdb_dashboard/: __init__.py
